--- a/DexMasterUI/Components/Layout/VersionPicker.razor
+++ b/DexMasterUI/Components/Layout/VersionPicker.razor
@@ -93,6 +93,7 @@
                 }
                 
                 _selectedVersion = _versionsInGeneration.First().Name;
+                await SelectedVersionChanged.InvokeAsync(_selectedVersion);
             }
         }
         
