--- a/DexMasterUI/Components/Layout/VersionPicker.razor
+++ b/DexMasterUI/Components/Layout/VersionPicker.razor
@@ -48,30 +48,34 @@
 
     private IEnumerable<Generation> _generations;
     private IEnumerable<Version> _versionsInGeneration;
-    private Version _version;
     private bool _generationDisabled = true;
     private bool _versionDisabled = true;
+    private bool _dataIsLoaded = false;
     private string _selectedGeneration = "national";
     private string _selectedVersion = "national";
 
     protected override async Task OnInitializedAsync()
     {
-        _generationDisabled = _versionDisabled = true;
-        _generations = await pokeApiService.GetGenerationListAsync();
-        _generationDisabled = _versionDisabled = false;
+        if (!_dataIsLoaded)
+        {
+            _generationDisabled = _versionDisabled = true;
+            _generations = await pokeApiService.GetGenerationListAsync();
+            _generationDisabled = _versionDisabled = false;
+            _dataIsLoaded = true;
+        }
     }
     
     private async Task GenerationChanged(string value)
     {
         _versionDisabled = true;
 
-        if (string.IsNullOrWhiteSpace(value) == false)
+        if (!string.IsNullOrWhiteSpace(value))
         {
             if (value == "national")
             {
                 _selectedGeneration = "national";
                 _selectedVersion = "national";
-                _versionDisabled = true;
+                return;
             }
             else
             {
@@ -80,9 +84,8 @@
                 _selectedVersion = "";
 
                 _versionsInGeneration = await pokeApiService.GetAllVersionsOfGenerationAsync(generation);
-                
-                _selectedVersion = _versionsInGeneration.First().Name;
-                await SelectedVersionChanged.InvokeAsync(_selectedVersion);
+
+                await VersionChanged(_versionsInGeneration.First().Name);
             }
         }
         
@@ -92,8 +95,7 @@
     
     private async Task VersionChanged(string value)
     {
-        _version = await pokeApiService.GetVersionByNameAsync(value);
-        _selectedVersion = _version.Name;
+        _selectedVersion = value;
         await SelectedVersionChanged.InvokeAsync(_selectedVersion);
         StateHasChanged();
     }
