--- a/DexMasterUI/Components/Display/PokemonDetails.razor
+++ b/DexMasterUI/Components/Display/PokemonDetails.razor
@@ -1,14 +1,54 @@
 @using DexMasterLibrary.Enums
 
-@if (_pokemon != null && _pokemonSpecies != null)
+@if (Pokemon.Key != null && Pokemon.Value != null)
 {
-    <VersionPicker SelectedVersionChanged="SetVersion"></VersionPicker>
-  
-    <MudText Typo="Typo.h6">@_pokemonInfo.Name</MudText>
-    <MudText Typo="Typo.h6">@_pokemonInfo.Type1</MudText>
-    <MudText Typo="Typo.h6">@_pokemonInfo.Type2</MudText>
-    <MudImage Src="@_pokemon.Sprites.FrontDefault"/>
-    <MudText Typo="Typo.body1">@_pokemonInfo.FlavourText</MudText>
+    <MudContainer MaxWidth="MaxWidth.Large">
+        <MudGrid Justify="Justify.SpaceEvenly">
+                <MudItem lg="12">
+                    <VersionPicker SelectedVersionChanged="SetVersion"></VersionPicker>
+                </MudItem>
+            <MudItem lg="12">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.h2">@_pokemonInfo.Name</MudText>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="6">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.caption">Type 1</MudText>
+                    <MudText Typo="Typo.h3">@_pokemonInfo.Type1</MudText>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="6">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.caption">Type 2</MudText>
+                    <MudText Typo="Typo.h3">@_pokemonInfo.Type2</MudText>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="12">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudImage Src="@Pokemon.Key.Sprites.FrontDefault" Width="20"/>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="6">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.caption">Height</MudText>
+                    <MudText Typo="Typo.h6">@_pokemonInfo.Height</MudText>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="6">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.caption">Weight</MudText>
+                    <MudText Typo="Typo.h6">@_pokemonInfo.Weight</MudText>
+                </MudPaper>
+            </MudItem>
+            <MudItem lg="12">
+                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
+                    <MudText Typo="Typo.caption">Dex Entry</MudText>
+                    <MudText Typo="Typo.body1">@_pokemonInfo.FlavourText</MudText>
+                </MudPaper>
+            </MudItem>
+        </MudGrid>
+    </MudContainer>
     
     @if (SelectedVersion != null)
     {
@@ -18,15 +58,13 @@
 
 @code {
     [Parameter] 
-    public int PokemonId { get; set; }
+    public KeyValuePair<Pokemon, PokemonSpecies> Pokemon { get; set; }
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
 
     private string SelectedVersion { get; set; }
-    
-    private Pokemon _pokemon;
-    private PokemonSpecies _pokemonSpecies;
+
     private PokemonInfo _pokemonInfo = new();
 
     private class PokemonInfo
@@ -44,20 +82,17 @@
     
     protected override async Task OnParametersSetAsync()
     {
-        _pokemon = await pokeApiService.GetPokemonByIdAsync(PokemonId);
-        _pokemonSpecies = await pokeApiService.GetPokemonSpeciesAsync(_pokemon);
-
-        if (_pokemon != null && _pokemonSpecies != null)
+        if (Pokemon.Key != null && Pokemon.Value != null)
         {
-            _pokemonInfo.Id = _pokemon.Id;
-            _pokemonInfo.Name = _pokemon.Name;
-            _pokemonInfo.Height = _pokemon.Height.ToString() + "cm";
-            _pokemonInfo.Weight = _pokemon.Weight.ToString() + "g";
-            _pokemonInfo.Abilities = _pokemon.Abilities;
-            _pokemonInfo.Type1 = CommonFunctions.ConvertStringToEnum<Types>(_pokemon.Types[0].Type.Name).GetValueOrDefault();
-            _pokemonInfo.Type2 = _pokemon.Types.Count > 1 ? CommonFunctions.ConvertStringToEnum<Types>(_pokemon.Types[1].Type.Name).GetValueOrDefault() : null;
-            _pokemonInfo.MainSprite = _pokemon.Sprites.Other.OfficialArtwork.FrontDefault;
-            _pokemonInfo.FlavourText = _pokemonSpecies.FlavorTextEntries.FirstOrDefault(x => x.Language.Name == "en").FlavorText;
+            _pokemonInfo.Id = Pokemon.Key.Id;
+            _pokemonInfo.Name = CommonFunctions.Capitalise(Pokemon.Key.Name);
+            _pokemonInfo.Height = Pokemon.Key.Height.ToString() + "cm";
+            _pokemonInfo.Weight = Pokemon.Key.Weight.ToString() + "g";
+            _pokemonInfo.Abilities = Pokemon.Key.Abilities;
+            _pokemonInfo.Type1 = CommonFunctions.ConvertStringToEnum<Types>(Pokemon.Key.Types[0].Type.Name).GetValueOrDefault();
+            _pokemonInfo.Type2 = Pokemon.Key.Types.Count > 1 ? CommonFunctions.ConvertStringToEnum<Types>(Pokemon.Key.Types[1].Type.Name).GetValueOrDefault() : null;
+            _pokemonInfo.MainSprite = Pokemon.Key.Sprites.Other.OfficialArtwork.FrontDefault;
+            _pokemonInfo.FlavourText = Pokemon.Value.FlavorTextEntries.FirstOrDefault(x => x.Language.Name == "en").FlavorText;
         }
     }
 
